# tree-sitter-openscad

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  openscad.dylib  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-openscad.pc.in
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_openscad/: binding.c
src/: grammar.json  node-types.json  parser.c
